--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -1,3 +1,10 @@
+.card-template-like-button-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+
 .card__like-button {
   width: 21px;
   height: 18px;
@@ -17,4 +24,9 @@
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+
+.card_like-counter {
+  font-size: 13px;
+  color: rgba(0, 0, 0, 1);
 }
